@@ -1,5 +1,6 @@
 #+TITLE: slcard changelog
 
+<2022-04-19> Version 2.2.0 Add json file format.
 <2021-10-05> Version 2.1.2 Fixed end-game message in gui mode.
 <2021-10-02> Version 2.1.0 Added in-game font size adjustment feature.
 <2021-10-01> Version 2.0.0 Complete rewritten slcard.
